--- a/config/resources/application.properties
+++ b/config/resources/application.properties
@@ -1,5 +1,3 @@
 app.name=blog-rest-service
-client.id=38859096400.apps.googleusercontent.com
-email.adress=38859096400@developer.gserviceaccount.com
-client.secret=wRK3e6auN2VSLBru2tupAp8A
-redirect.uri=http://blog-rest-service.appspot.com/oauth2callback
+app.oauth=/oauth-servlet
+app.oauthcallback=/oauth2callback
